https://youtu.be/44RAXu2yDc8
-Изменены процедуры сохранения/ загрузки данных, теперь они с помощью ID и рубят взаимные ссылки при сохранении и восстанавливают их при загрузке. Много времени потерял на эту проблему т.к. думал, что datacontractserializer либо JSON.NET решает это, но так и не нашел решения кроме как расставить ID.
- Промежуточный View для просмотра информации о записи.
-Анимация при выборе записи

--- a/Views/ChangePlayerWindow.xaml
+++ b/Views/ChangePlayerWindow.xaml
@@ -30,7 +30,8 @@
         <ComboBox FontSize="24" Grid.Column="3" Grid.Row="3" 
                   ItemsSource="{Binding ListOfTeams.List}"
                   DisplayMemberPath="Name"
-                  SelectedItem="{Binding Path=SelectedPlayer.Team}"/>
+                  SelectedItem="{Binding Path=SelectedPlayer.Team, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                  SelectedValue="{Binding Path=SelectedPlayer.Team, UpdateSourceTrigger=PropertyChanged}"/>
         <Button Style="{StaticResource GreenButton}" Grid.ColumnSpan="2" Grid.Row="5" Content="Удалить" FontSize="24" Margin="10" Command="{Binding bRemove_Command}"/>
     </Grid>
 </Window>
