--- a/Styles/Texts.xaml
+++ b/Styles/Texts.xaml
@@ -9,6 +9,27 @@
         <Setter Property="Foreground" Value="Black"/>
     </Style>
 
+    <Style x:Key="BaseLabel" TargetType="Label">
+        <Setter Property="FontFamily" Value="{StaticResource BaseFont}"/>
+        <Setter Property="FontSize" Value="{StaticResource big}"/>
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="Foreground" Value="White"/>
+    </Style>
+
+    <Style x:Key="LabelInfo1" TargetType="Label">
+        <Setter Property="FontFamily" Value="{StaticResource BaseFont}"/>
+        <Setter Property="FontSize" Value="{StaticResource big}"/>
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Background" Value="{StaticResource MediumGreenBrush}"/>
+    </Style>
+
+    <Style x:Key="LabelInfo2" BasedOn="{StaticResource LabelInfo1}" TargetType="Label">
+        <Setter Property="Background" Value="{StaticResource LightGreenBrush}"/>
+    </Style>
+
     <Style x:Key="BaseTextBox" TargetType="TextBox">
         <Setter Property="FontFamily" Value="{StaticResource BaseFont}"/>
         <Setter Property="FontSize" Value="{StaticResource medium}"/>
