--- a/Views/MatchPage.xaml
+++ b/Views/MatchPage.xaml
@@ -7,10 +7,8 @@
       xmlns:vm="clr-namespace:WpfLawyersSystem.ViewModels"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="600"
-      Title="MatchPage">
-    <Page.DataContext>
-        <vm:MatchViewModel/>
-    </Page.DataContext>
+      Title="MatchPage"
+      Background="{StaticResource MediumGreenBrush}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -20,7 +18,16 @@
 
         <TextBlock Grid.Row="0" TextAlignment="Center" VerticalAlignment="Center" FontSize="36" Text="Матчи"/>
 
-        <ListView Margin="10" Grid.Row="1" Name="Teams" ItemsSource="{Binding ListOfMatches.List}">
+        <ListView Margin="10" Grid.Row="1" Name="Teams" Style="{StaticResource GreenListView}" 
+                  ItemsSource="{Binding MatchesView, UpdateSourceTrigger=PropertyChanged}"
+                  SelectedItem="{Binding SelectedMatch, UpdateSourceTrigger=PropertyChanged}">
+            <ListView.ContextMenu>
+                <!--Контесктное меню-->
+                <ContextMenu >
+                    <MenuItem Header="Подробнее" Command="{Binding Path=bInfoSelectedItem_Command}"/>
+                    <MenuItem Header="Удалить" Command="{Binding Path=bRemoveItem_Command}"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Team 1" Width="190" DisplayMemberBinding="{Binding Path = Team1.Name }"/>
