--- a/Views/TournamentPage.xaml
+++ b/Views/TournamentPage.xaml
@@ -21,7 +21,7 @@
         <ListView Margin="10" Grid.Row="1" Name="Teams" 
                   Style="{StaticResource GreenListView}"
                   ItemsSource="{Binding TournamentsView, UpdateSourceTrigger=PropertyChanged}"
-                  SelectedItem="{Binding SelectedItem, UpdateSourceTrigger=PropertyChanged}">
+                  SelectedItem="{Binding SelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <ListView.ContextMenu>
                 <!--Контесктное меню-->
                 <ContextMenu >
